--- a/.github/workflows/maven_jar.yml
+++ b/.github/workflows/maven_jar.yml
@@ -31,4 +31,4 @@ jobs:
         run: mvn dependency:copy -Dartifact=cn.doar:code-review-sdk:1.0 -DoutputDirectory=./libs
 
       - name: Run Code Review
-        run: java -jar ./libs/original-code-review-sdk-1.0.jar
+        run: java -jar ./libs/code-review-sdk-1.0.jar.jar
