--- a/.github/workflows/maven_jar.yml
+++ b/.github/workflows/maven_jar.yml
@@ -28,7 +28,9 @@ jobs:
         run: mvn clean install
 
       - name: Copy code-review-sdk JAR
-        run:  mkdir -p ./libs cp ./code-review-sdk/target/*.jar ./libs/
+        run: |
+          mkdir -p ./libs
+          cp ./code-review-sdk/target/*.jar ./libs/
 
       - name: Run Code Review
         run: java -jar ./libs/code-review-sdk-1.0.jar
