--- a/code-review-sdk/pom.xml
+++ b/code-review-sdk/pom.xml
@@ -102,7 +102,7 @@
                     <archive>
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <mainClass>plus.gaga.middleware.sdk.OpenAiCodeReview</mainClass>
+                            <mainClass>cn.doar.sdk.CodeReview</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
